re-read intro, chapters 2, 3, 5 and conclusion
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5172 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/alignment.tex
+++ b/2010/thesis/alignment.tex
@@ -344,7 +344,7 @@ Despite the inconsistent assumption, the result \Eq{al fit equation} is almost c
 
 The only difference between $\tilde\mat S$ in \Eq{al fit equation} and $\bar\mat S$ in \Eq{al exact fit equation} is that $\tilde\mat S$ contains both $\mat\Ga$ matrices with tildes (see \Eq{al mat S}). This difference represents the error we make by the simplification step \Eq{al tau linearization}. Since the expected misalignments are small, the difference between $\mat\Ga$ and $\tilde\mat\Ga$ shall be small too and it is reasonable to expect that the solution $\hat\vec\ch$ of \Eq{al fit equation} would be close to the actual misalignments $\vec\ch$. The error can be reduced by performing several iterations, which will be discussed in \Sc{al err}.
 
-Let us close this section with a simple example -- let us consider only the shifts in the read-out direction and a data sample where all sensors are active in all events. In such a case the coefficients $\ga^n = -1$ (cf. \Tb{al alignment quantities}) and thus matrices $\mat\Ga^n = -1$. Note that the $\ga^n$ coefficients are independent of the track parameters $\vec a^n$ and $\vec b^n$. Thus there is no need for the simplification \Eq{al tau linearization}, which effectively means $\tilde\mat S = \bar\mat S$ and there is no difference between the exact fit equation \Eq{al exact fit equation} and the simplified one \Eq{al fit equation}. They can be written (here the indices $i,j$ identify the sensors):
+Let us close this section with a simple example -- let us consider only the shifts in the read-out direction and a data sample where all sensors are active in all events. In such a case the coefficients $\ga^n = -1$ (cf.~\Tb{al alignment quantities}) and thus matrices $\mat\Ga^n = -1$. Note that the $\ga^n$ coefficients are independent of the track parameters $\vec a^n$ and $\vec b^n$. Thus there is no need for the simplification \Eq{al tau linearization}, which effectively means $\tilde\mat S = \bar\mat S$ and there is no difference between the exact fit equation \Eq{al exact fit equation} and the simplified one \Eq{al fit equation}. They can be written (here the indices $i,j$ identify the sensors):
 \eqref{\tilde\mat S \hat\vec\ch = \tilde\vec T\ , \quad
 	\tilde\mat S = \pmatrix{
 		\ddots	&						&\udots	\cr
@@ -368,7 +368,7 @@ Hence the $\tilde\vec T$ vector is given by the sum of the normalized residuals,
 
 In the previous section we have derived the fit equation \Eq{al fit equation}. If the matrix $\tilde\mat S$ was regular, one could obtain the alignment parameters $\hat\vec\ch$ by means of matrix inversion. In this section we will show that $\tilde\mat S$ is singular and we will identify the regular (accessible to track-based alignment) and singular (inaccessible) misalignment modes.
 
-But let us look closer on the fit equation. Note that the sensors' measurements enter the \rhs{} in the form of residuals. That means that any misalignment mode that does not generate residuals can not be revealed by the track-based algorithm. These misalignment modes are those where the misalignments $\vec\ch_j$ can be compensated (keeping measurements $\vec\mu^n$ unchanged) by varying the track parameters $\vec\ta^n \to {\vec\ta '}^n$ (cf. \Eq{al vec mu}):
+But let us look closer on the fit equation. Note that the sensors' measurements enter the \rhs{} in the form of residuals. That means that any misalignment mode that does not generate residuals can not be revealed by the track-based algorithm. These misalignment modes are those where the misalignments $\vec\ch_j$ can be compensated (keeping measurements $\vec\mu^n$ unchanged) by varying the track parameters $\vec\ta^n \to {\vec\ta '}^n$ (cf.~\Eq{al vec mu}):
 \eqref{\mat\al^n {\vec\ta}^n + \sum_j \mat\Ga_j^n \vec\ch_j = \vec\mu^n = \mat\al^n {\vec\ta'}^n\ .}{al tau chi equiv}
 Considering that the $\mat\Ga$ matrices may depend on the track parameters (see \Tb{al alignment quantities}), this can be recast to
 \eqref{\sum_j \mat\Ga_j(\vec\ta^n)\, \vec\ch_j = \al^n\, (\underbrace{{\vec\ta'}^n - \vec\ta^n}_{\De\vec\ta^n})\ .}{al sm con}
@@ -380,7 +380,7 @@ If one can find a vector $\De\vec\ta^n$ for any set of track parameters $\vec\ta
 }{al sm}
 which is a direct consequence of \Eq{al prop sigma n}. This would mean that $\mat S$ is singular (see e.g.~theorem 1.5.3 in \bref{anton}), with $\vec\ch$ being an eigenvector corresponding to zero eigenvalue. This vector represents an misalignment mode that is not accessible to the track-based alignment. We will refer to such modes as \em{singular modes}.
 
-Let us come back to \Eq{al sm con}. The key point was to find a $\De\vec\ta^n$ vector for any vector $\vec\ta^n$ -- no matter what was the interpretation of $\vec\ta^n$ -- whether it was a vector of true or estimated track parameters (cf. \Eq{al tau linearization}). This is exactly what makes the difference between $\mat\Ga$ and $\tilde\mat\Ga$. Since this difference is irrelevant for \Eq{al sm con}, it can be written with tilded $\mat\Ga$ matrix too. Consequently, the result of \Eq{al sm} is also valid for $\bar\mat S$ and $\tilde\mat S$ (the difference among $\mat S$, $\bar\mat S$ and $\tilde\mat S$ matrices is only the use of $\mat\Ga$ or $\tilde\mat\Ga$). To conclude, the singular modes found in \Eq{al sm} are also singular modes for $\bar\mat S$ and $\tilde\mat S$ matrices.
+Let us come back to \Eq{al sm con}. The key point was to find a $\De\vec\ta^n$ vector for any vector $\vec\ta^n$ -- no matter what was the interpretation of $\vec\ta^n$ -- whether it was a vector of true or estimated track parameters (cf.~\Eq{al tau linearization}). This is exactly what makes the difference between $\mat\Ga$ and $\tilde\mat\Ga$. Since this difference is irrelevant for \Eq{al sm con}, it can be written with tilded $\mat\Ga$ matrix too. Consequently, the result of \Eq{al sm} is also valid for $\bar\mat S$ and $\tilde\mat S$ (the difference among $\mat S$, $\bar\mat S$ and $\tilde\mat S$ matrices is only the use of $\mat\Ga$ or $\tilde\mat\Ga$). To conclude, the singular modes found in \Eq{al sm} are also singular modes for $\bar\mat S$ and $\tilde\mat S$ matrices.
 
 Later, we will find useful to use the definition of the $\mat\al$ matrix \Eq{al mat alpha} and rewrite the \rhs{} of \Eq{al sm con} as
 \eqref{\mat\al^n\, \De\vec\ta^n = \pmatrix{
@@ -388,7 +388,7 @@ Later, we will find useful to use the definition of the $\mat\al$ matrix \Eq{al 
 	\vec d_i \cdot (\De\vec a^n z_i + \De\vec b^n)\cr
 	\vdots\cr
 }, \quad i\hbox{ goes through all sensors involved in }n\hbox{-th event.}}{al sm track par}
-The vectors $\De\vec a^n$ and $\De\vec b^n$ are merely an alternative description of the track-parameter variation $\De\vec\ta^n$, cf. \Eq{al vec tau}.
+The vectors $\De\vec a^n$ and $\De\vec b^n$ are merely an alternative description of the track-parameter variation $\De\vec\ta^n$, cf.~\Eq{al vec tau}.
 
 In the rest of this section we will identify all singular modes that may appear in the alignment of the \abb{RP} sensors. We will first focus on the singular modes that arise from the interplay between the geometry of the detector apparatus and the geometry of the tracks. Afterwards we will turn our attention to the singular modes provoked by special (pathological) track distributions.
 
@@ -704,7 +704,7 @@ We have seen that a set of constraints must fulfill certain conditions, see \Eq{
 	0		& 0			& 0 		& 1 		\cr
 }\ .}{al fix-det cnst ex}
 
-\> The last option is called \em{final constraints} since it has been used for the final alignment analysis (and the elastic scattering analysis presented in \Sc{felm}). In the \Sc{al mc tests} we will show the shifts in $z$ can not be resolved with a satisfactory precision (see \Fg{al err shz theta}). That is why they have been dropped from the alignment procedure. As shown in \Fg{al err rotz rho,al err rotz theta}, the rotation between $U$ and $V$ sensors and between far and near units can only be determined with a large uncertainty. It is thus necessary to constrain these two additional weak modes, increasing the number of rotation constraints to four (cf. \Tb{al sing mode overview}). The final constraints require zero mean rotation $\De\rh$, separately for $U$ and $V$ sensors and separately for each unit.
+\> The last option is called \em{final constraints} since it has been used for the final alignment analysis (and the elastic scattering analysis presented in \Sc{felm}). In the \Sc{al mc tests} we will show the shifts in $z$ can not be resolved with a satisfactory precision (see \Fg{al err shz theta}). That is why they have been dropped from the alignment procedure. As shown in \Fg{al err rotz rho,al err rotz theta}, the rotation between $U$ and $V$ sensors and between far and near units can only be determined with a large uncertainty. It is thus necessary to constrain these two additional weak modes, increasing the number of rotation constraints to four (cf.~\Tb{al sing mode overview}). The final constraints require zero mean rotation $\De\rh$, separately for $U$ and $V$ sensors and separately for each unit.
 \par\parindent\itindent\indent\hang
 The read-out-direction shift constraints are similar to those from the homogeneous-constraints set, with the exception that the horizontal pots are not included in the constraints. The reason is that we trust the beam position determination by the collimation alignment (see \Sc{al collim}) and therefore we want to preserve the vertical center between the top and bottom pots. This is achieved by asking no mean shift of the top and bottom pot.
 \par\parindent\itindent\indent\hang
@@ -1256,7 +1256,7 @@ Let us note that one could build more elastic-selection cuts than presented in \
 
 Since the relations \Eq{al el dxdx,al el dyy,al el x} involve the misalignment parameters, they can be used for alignment too. In the rest of this section we will present several alignment methods. The first one is dedicated to the horizontal alignment, methods two to four to the vertical alignment.
 
-\fig{fig/pdf/al_el_selection.pdf}{al el selection}{An illustration of the elastic-event selection cuts (data from 21 September). Each row corresponds to one cut. Left: the events before (black) and after (red) the cut. The light-green area represents the cut requirement. Right: the distribution of events around the light-green band centre (black) with a Gaussian fit (red). The dotted lines show the cut thresholds, cf. \Tb{al el cuts}.}
+\fig{fig/pdf/al_el_selection.pdf}{al el selection}{An illustration of the elastic-event selection cuts (data from 21 September). Each row corresponds to one cut. Left: the events before (black) and after (red) the cut. The light-green area represents the cut requirement. Right: the distribution of events around the light-green band centre (black) with a Gaussian fit (red). The dotted lines show the cut thresholds, cf.~\Tb{al el cuts}.}
 
 \block{Method 1}
 
