--- a/2010/thesis/elastic.tex
+++ b/2010/thesis/elastic.tex
@@ -135,7 +135,7 @@ These plots also reveal the common mechanism how the first dip appears - the ima
 
 \fig{fig/pdf/el_mod_rho.pdf}{el mod rho}{The $t$-dependence of $\rho$ as predicted by the four models. Legend as in \Fg{el mod B}.}
 
-As anticipated above, there are not many hints for fixing the phase of the amplitude. Still there is one more worth mentioning. For a more detailed discussion, see Sec.~7 in \bref{kklp11}, here we just outline the main ideas. The argument is related to the impact-parameter picture. It sounds natural that high-impact-parameter collisions, when the particles are merely glancing, would result rather in an elastic than inelastic scattering. And vice versa -- a head-on collision is likely to break the particles and lead to an inelastic scattering. Tab.~3 in the quoted table presents \abb{RMS} impact-parameter values of elastic and inelastic collisions, derived for the four models. Surprisingly enough, the inelastic collisions came out more peripheral (\abb{RMS} of $\approx 1.4\un{fm}$) than the elastic ones (\abb{RMS} of $\approx 0.9\un{fm}$). The authors suggested a solution to this puzzle -- modifying the phase such that it raises sharply at low-$|t|$ region (see their Fig.~1) increases the \abb{RMS} value of impact parameter for the elastic collisions and restores, therefore, the expected hierarchy.
+As anticipated above, there are not many hints for fixing the phase of the amplitude. Still there is one more worth mentioning. For a more detailed discussion, see Sec.~7 in \bref{kklp11}, here we just outline the main ideas. The argument is related to the impact-parameter picture. It sounds natural that high-impact-parameter collisions, when the particles are merely glancing, would result rather in an elastic than inelastic scattering. And vice versa -- a head-on collision is likely to break the particles and lead to an inelastic scattering. Tab.~3 in the quoted table presents \abb{RMS} impact-parameter values of elastic and inelastic collisions, derived for the four models. Surprisingly enough, the inelastic collisions came out more peripheral (\abb{RMS} of $\approx 1.4\un{fm}$) than the elastic ones (\abb{RMS} of $\approx 0.9\un{fm}$). The authors suggested a solution to this puzzle -- modifying the phase such that it rises sharply at low-$|t|$ region (see their Fig.~1) increases the \abb{RMS} value of impact parameter for the elastic collisions and restores, therefore, the expected hierarchy.
 
 \section[el coulomb]{Coulomb interference}
 
@@ -370,7 +370,7 @@ The above doubts led us to verify Cahn's formula by a numerical calculation base
 \emfig
 
 
-%So far we have been using only the model of Bourrely et al. It provides a prescription for the hadronic eikonal $\de^{\rm H}(b)$ and therefore it is easy to apply \Eq{el F CH eik}. However, many hadronic models give only an amplitude in the $t$-space $\FH(t)$. Then, the hadronic eikonal $\de^{\rm H}(b)$ could, in principle, be obtained by the inverse Fourier-Bessel transform (cf. \Eq{el eik app F})
+%So far we have been using only the model of Bourrely et al. It provides a prescription for the hadronic eikonal $\de^{\rm H}(b)$ and therefore it is easy to apply \Eq{el F CH eik}. However, many hadronic models give only an amplitude in the $t$-space $\FH(t)$. Then, the hadronic eikonal $\de^{\rm H}(b)$ could, in principle, be obtained by the inverse Fourier-Bessel transform (cf.~\Eq{el eik app F})
 %\eqref{\de^{\rm H}(b) = {1\over 2\i} \log \left[ 1 + {2\i\over s} \int\limits_0^\infty q\ \d q\ J_0(b q)\ \FH(t = -q^2)  \right ]\ .}{el eik app F inv}
 
 Let us mention one conceptual issue of Cahn's interference formula \Eq{el phase Cahn} -- since the lower bound $T$ of the integral shall be taken to $-\infty$, the formula requires the knowledge of the hadronic amplitude $\FH(t)$ also outside the physical region, that is for $t < t_{\rm min}$. The origin of this trouble can be traced back to Cahn's using the eikonal approximation that assumes infinitely high energies (and thus $t_{\rm min} \to -\infty$), see our comments below \Eq{el eik rep}. While this is a serious issue from a theoretical point of view,  it has little practical impact for Coulomb-interference calculations. Too see this, one should consider the rapid fall off of the hadronic amplitude (it drops by more than six orders of magnitude between $|t|=0$ and $20\un{GeV^2}$, see \Fg{el mod dsdt large}). Moreover the hadronic amplitude enters the interference formula \Eq{el phase Cahn} as the ratio $\FH(t') / \FH(t)$, where $t$ is the point of evaluation and $t'$ is the integration variable. Therefore the ratio becomes negligible when $t'$ is much larger than $t$ -- in other words when $T$ is sufficiently large:
@@ -419,7 +419,7 @@ Cahn found his result \Eq{el phase Cahn} agree with the one of \WY{} \Eq{el phas
 
 One of the quantities that can demonstrate the difference between Cahns's (or corrected \KL) and \WY{} formulae is the \em{interference importance} function
 \eqref{Z(t) = {|F^{\rm C+H}(t)|^2 - |F^{\rm C}(t)|^2 - |F^{\rm H}(t)|^2\over |F^{\rm C+H}(t)|^2}\ ,}{el Z}
-which gives a relative importance of the Coulomb interference in the cross-section. \Fg{el cic noff Z} shows this function plotted for the case of no form factor. Up to $|t| \approx 0.1\un{GeV^2}$ all formulae agree, but then a dramatic difference occurs at the position of the first diffractive dip ($|t|\approx 0.5\un{GeV^2}$). This is the point where the imaginary parts of the phases reach large values, cf. \Fg{el cic noff Psi}.
+which gives a relative importance of the Coulomb interference in the cross-section. \Fg{el cic noff Z} shows this function plotted for the case of no form factor. Up to $|t| \approx 0.1\un{GeV^2}$ all formulae agree, but then a dramatic difference occurs at the position of the first diffractive dip ($|t|\approx 0.5\un{GeV^2}$). This is the point where the imaginary parts of the phases reach large values, cf.~\Fg{el cic noff Psi}.
 
 \fig{fig/pdf/el_cic_noff_Z.pdf}{el cic noff Z}{Left: the interference importance function $Z(t)$. Right: the $\ze(t)$. Both: no form factor included, solid lines represent the eikonal calculation.}
 
@@ -438,7 +438,7 @@ The function $\ze(t)$ tends to one when both amplitudes are similar and tends to
 
 \block{Coulomb interference for different hadronic models}
 
-So far we have used only the model of Bourrely et al. In the next few plots we will show some interference-related quantities calculated with the formula of \KaL{} (\Eq{el phase KL}) including the form factor of Puckett. \Fg{el mod Z} shows the importance of the interference term. As expected, the peaks occur at the positions of dips and shoulders of the hadronic cross-section, cf. \Fg{el mod dsdt narrow}.
+So far we have used only the model of Bourrely et al. In the next few plots we will show some interference-related quantities calculated with the formula of \KaL{} (\Eq{el phase KL}) including the form factor of Puckett. \Fg{el mod Z} shows the importance of the interference term. As expected, the peaks occur at the positions of dips and shoulders of the hadronic cross-section, cf.~\Fg{el mod dsdt narrow}.
 
 \fig{fig/pdf/el_mod_Z.pdf}{el mod Z}{The importance of the interference term (see \Eq{el Z}) as a function of $t$. Calculated with CKL formula and Puckett form factor.}
 
