--- a/2010/thesis/references.bib
+++ b/2010/thesis/references.bib
@@ -661,6 +661,17 @@
       year           = "1989",
 }
 
+@Article{jakob92,
+      author         = "JAKOB, R. and KROLL, P.",
+      title          = "Coulomb hadronic interference with polarized protons at
+                        intermediate-energies",
+      journal        = "Z. Phys.",
+      volume         = "A344",
+      pages          = "87-94",
+      doi            = "10.1007/BF01291025",
+      year           = "1992",
+}
+
 @Article{klk92,
       author         = "KUNDR\' AT, V., LOKAJ\' I\v CEK, M. and KRUPA, D.",
       title          = "High-energy elastic hadron scattering in Coulomb and
