--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -22,7 +22,7 @@
 	% to show labels
 	\ShowLabelstrue \advance\hoffset-1.5cm
 \else
-	\def\FootText{(VERSION 12)}
+	\def\FootText{(VERSION 13)}
 \fi
 
 \def\pmt#1{{\tt #1}}
@@ -51,8 +51,8 @@
 \vskip2cm
 \centerline{\fPbxiv Institute of Particle and Nuclear Physics}
 \ialign to\hsize{\tabskip 0pt plus1fil\strut #&\hfil\fPbxiv #\ \tabskip0pt&\fPbxiv #\hfil\tabskip 0pt plus1fil\cr
-&Supervisors:		& RNDr. Vojt\v ech Kundr\' at, DrSc.\cr
-&					& Mario Deile, PhD\cr
+&Supervisor:		& RNDr. Vojt\v ech Kundr\' at, DrSc.\cr
+%&					& Mario Deile, PhD\cr
 &Study Programme:	& Physics\cr
 &Specialization:	& Subnuclear Physics\cr
 }
@@ -98,7 +98,7 @@ I understand that my work relates to the rights and obligations under the Act No
 
 \vskip2\baselineskip
 
-In Prague, date
+In\hskip 2cm, date
 
 \vskip2\baselineskip
 \eject
@@ -119,7 +119,7 @@ Název práce: 			& Elastický rozptyl na LHC\cr
 Autor:					& Jan Kašpar\cr
 Katedra:				& Ústav částicové a jaderné fyziky\cr
 Vedoucí doktorské práce:& RNDr.~Vojtěch Kundrát, DrSc., Fyzikální ústav AV ČR, v.~v.~i.\cr
-						& Mario Deile, PhD, CERN, Ženeva\cr
+%						& Mario Deile, PhD, CERN, Ženeva\cr
 Abstrakt:				& \TODO{přeložit anglický abstrakt}\cr
 Klíčová slova:			& elastický rozptyl protonů, TOTEM, římské hrnce, alignment\cr
 }
@@ -131,8 +131,8 @@ Klíčová slova:			& elastický rozptyl protonů, TOTEM, římské hrnce, align
 Title:		& Elastic scattering at the LHC\cr
 Author:		& Jan Ka\v spar\cr
 Departement:& Institute of Particle and Nuclear Physics\cr
-Supervisors of the doctoral thesis:& RNDr.~Vojt\v ech Kundr\' at, DrSc., Institute of Physics AS \v CR\cr
-			& Mario Deile, PhD, CERN, Geneva\cr
+Supervisor of the doctoral thesis:& RNDr.~Vojt\v ech Kundr\' at, DrSc., Institute of Physics AS CR\cr
+%			& Mario Deile, PhD, CERN, Geneva\cr
 %Abstract:	& [abstract of 80-200 words in English]\cr
 Abstract:	& 
 The elastic scattering of protons is the simplest $\rm pp$ interaction possible, however, it still presents a challenge for the theory. In this thesis we discuss the elastic scattering from theoretical as well as experimental point of view. In the theory part, we present several models and their predictions for the LHC. We also discuss the Coulomb-hadronic interference, where we present a new eikonal calculation to all orders of $\al$, the fine-structure constant. In the experimental part we introduce the TOTEM experiment which is dedicated, among others, to the measurement of the elastic scattering at the LHC. This measurement is performed primarily with the Roman Pot (RP) detectors -- movable beam-pipe insertions hundreds of meters from the interaction point, that can detect protons scattered to very small angles. We discuss some aspects of the RP simulation and reconstruction software. A great detail is devoted to the technique of RP alignment -- a method of determination of the relative positions among the RP sensors and their positions with respect to the beam. At the end we present the analysis of TOTEM's first elastic scattering measurement at the LHC.\cr
